# tezca

./: .gitignore  .tezca-root  Cargo.toml  LICENSE  README.md  install.sh
config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
config/hypr/conf.d/: ai.conf  animations.conf  autostart.conf  decoration.conf  gaming.conf  input.conf  keybinds.conf  local.conf  monitors.conf  nvidia.conf  windowrules.conf
config/hypr/scripts/: cheatsheet.sh  scratch-term.sh  screenshot.sh  theme-select.sh  wallpaper-select.sh  wallpaper.sh  waybar-toggle.sh
config/kitty/: kitty.conf
config/nwg-dock-hyprland/: dock.sh  style.css
config/swappy/: config
config/swaync/: config.json  style.css
config/tezca-bar/: config.toml
config/tezca-dock/: dock.toml
config/tezca-settings/: style.css  tezca-settings.desktop
config/uwsm/: env  env-hyprland
config/walker/: config.toml
config/walker/themes/tezca/: style.css
config/waybar/: config.jsonc  style.css
config/wlogout/: layout  style.css
crates/tezca-bar/: Cargo.toml
crates/tezca-bar/src/: ai.rs  bar.css  bar.rs  config.rs  draw.rs  hypr.rs  main.rs  notify.rs  nowplaying.rs  popovers.rs  sysinfo.rs  theme.rs  tray.rs
crates/tezca-cli/: Cargo.toml
crates/tezca-cli/src/: cmd_bar.rs  cmd_display.rs  cmd_dock.rs  cmd_doctor.rs  cmd_game.rs  cmd_hypr.rs  cmd_keybind.rs  cmd_link.rs  cmd_settings.rs  cmd_theme.rs  cmd_wallpaper.rs  hypr.rs  main.rs  managed.rs  repo.rs  term.rs
crates/tezca-dock/: Cargo.toml
crates/tezca-dock/src/: apps.rs  config.rs  dock.rs  hypr.rs  magnifier.rs  main.rs  theme.rs
crates/tezca-settings/: Cargo.toml
crates/tezca-settings/src/: backend.rs  css.rs  keybinds.rs  main.rs  pages.rs
docs/: DESIGN.md
templates/: README.md  colors-hypr.conf  colors-hyprlock.conf  colors-kitty.conf  colors.css
themes/huitzilopochtli/: colors-hypr.conf  colors-hyprlock.conf  colors-kitty.conf  colors.css
themes/obsidian/: colors-hypr.conf  colors-hyprlock.conf  colors-kitty.conf  colors.css
themes/quetzalcoatl/: colors-hypr.conf  colors-hyprlock.conf  colors-kitty.conf  colors.css
themes/smoke/: colors-hypr.conf  colors-hyprlock.conf  colors-kitty.conf  colors.css
themes/xipe/: colors-hypr.conf  colors-hyprlock.conf  colors-kitty.conf  colors.css
wallpapers/: CREDITS.md
