# Tezca Rust workspace.
# The `tezca` control CLI lives in crates/tezca-cli (std-only); `tezca-dock`
# (Phase 5) is the bespoke gtk4-rs magnifying dock and carries the GTK stack.
[workspace]
resolver = "2"
members = ["crates/tezca-cli", "crates/tezca-dock", "crates/tezca-bar", "crates/tezca-settings"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["hivezga"]
repository = "https://github.com/hivezga/tezca"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
