# tezca-dock — the bespoke gtk4-rs magnifying macOS dock (DESIGN.md §6, Phase 5).
#
# Unlike the std-only `tezca` CLI, this crate carries the GTK stack. It's a
# separate workspace member so those deps never touch the control binary.
[package]
name = "tezca-dock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Magnifying macOS-style dock for Project:Tezca (GTK4 + layer-shell)"

[[bin]]
name = "tezca-dock"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_10"] }
gtk4-layer-shell = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-channel = "2"
signal-hook = "0.3"
